2009-07-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Throw the proper exception here.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: throw a parsing exception if we there is
	no key for a resource, this will get turned into a MoonError.
	* MoonError.cs: Get the error code from the xamlparseexception
	
2009-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Kind.cs: Regenerated.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* GeneratedPInvokes.cs: TabNavigation should activate if the
	  control does not handle the Tab key

2009-07-09  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Raise an error if we are trying to set a
	value type non nullable property to x:Null.

2009-07-09  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: If there is an error setting the value we
	should just propogate it up.

2009-07-07  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Seal/Unseal setters when setting
	properties, just like in unmanaged.

2009-07-06  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: When we add content properties we need to
	check if they are ILists.
	- Now that adding to an IList content property works properly
	don't add to IList in SetProperty, because that should be
	previously handled
	
2009-07-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* NativeMethods.cs: Added new delegate.

	* GeneratedPInvokes.cs: Regenerated.

2009-07-01  Chris Toshok  <toshok@ximian.com>

	* Kind.cs: regen.

2009-06-30  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: 
	* XamlLoaderCallbacks.cs: Add a validate_templates param
	* GeneratedPInvokes.cs: Regen
	
2009-06-30  Alan McGovern  <amcgovern@novell.com>

	* MarkupExpressionParser.cs: Set the source properly, it is
	  provided by either value or str_value, depending on which is
	  non-null.

2009-06-26  Chris Toshok  <toshok@ximian.com>

	* GeneratedPInvokes.cs: regen.
