@@ -1,5 +1,10 @@
 2009-07-13  Jackson Harper  <jackson@ximian.com>
 
+	* MoonError.cs: we need to pass the message back to unmanaged
+	also.
+
+2009-07-13  Jackson Harper  <jackson@ximian.com>
+
 	* ManagedXamlLoader.cs: Throw the proper exception here.
 
 2009-07-13  Jackson Harper  <jackson@ximian.com>
